
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-23
2022-01-03 Mikhail Dubrovin
- src/UtilsPSF.py - fix py3 issue - use int for devision

Tag: V02-00-22
2021-12-16 Mikhail Dubrovin
- geometry_convert - get rid of parameter --dettype in psana to CrystFEL converter
	modified:   ../app/geometry_convert
	modified:   ../doc/ChangeLog

Tag: V02-00-21
2021-12-15 Mikhail Dubrovin
- 1-st working version of UtilsPSF with separated testUtilsPSF.py
	new file:   examples/testUtilsPSF.py
	modified:   src/UtilsPSF.py

Tag: V02-00-20
2021-12-10 Mikhail Dubrovin
- GeometryAccess.py, GeometryObject.py
  - code cleaning - remove blanks and comments
  - add method get_seg_geo to GeometryAccess.py
- add UtilsPSF.py - development in progress
- src/GlobalUtils.py - fix issue reported by Silke about file mode - add parameter filemode=0o664 to method deploy_file

Tag: V02-00-19
2021-11-30 Mikhail Dubrovin
- modified:
  app/geometry_convert - add in -h more details about parameters and tests
  src/UtilsConvertCrystFEL.py - fix signs of tilts around x and y

Tag: V02-00-18
2021-11-23 Mikhail Dubrovin
- modified:
   app/geometry_convert - add conversion from Crystfel to psana if -fname is *.geom
   src/SegGeometry.py
       SegGeometryCspad2x1V1.py
       SegGeometryMatrixV1.py
       SegGeometryMatrixV2.py - remove blanks and comments
   src/UtilsConvert.py - change transition of parameters and self-tests
   src/UtilsConvertCrystFEL.py - complete implementation of geometry converter from crystfel to psana

Tag: V02-00-17
2021-11-05 Mikhail Dubrovin
- src/GlobalUtils.py
  - fix issue reported by Valerio. np.copy does not accept dtype...
  - remove blanks

Tag: V02-00-16
2021-10-05 Mikhail Dubrovin
- add SegGeometryEpix10kaV2.py with correct wide pixel size 225um (250um in V1)